@@ -24,9 +24,9 @@
 /**
  * @test
  * @summary Verifies JVMTI hadles pinned virtual threads correctly.
- * @requires vm.continuations
  * @compile --enable-preview -source ${jdk.version} PinnedTaskTest.java
  * @run main/othervm/native --enable-preview -agentlib:PinnedTaskTest PinnedTaskTest
+ * @run main/othervm/native --enable-preview -agentlib:PinnedTaskTest -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations PinnedTaskTest
  */
 
 import java.util.concurrent.atomic.AtomicBoolean;
